output/debug/a9912a4b18c048484e96aa3ce106da21930ed8b6.log
HEAD is now at a9912a4b Revert "[PA] Refactor to use a typed SlotStart to replace uintptr_t"
WARNING at the command-line "--args":1:249: Build argument has no effect.
is_debug=true use_partition_alloc_as_malloc=true use_allocator_shim=true shim_supports_sized_dealloc=true enable_backup_ref_ptr_support=true enable_backup_ref_ptr_slow_checks=true enable_dangling_raw_ptr_checks=true enable_ios_corruption_hardening=true raw_ptr_zero_on_construct=true raw_ptr_zero_on_move=true raw_ptr_zero_on_destruct=true
                                                                                                                                                                                                                                                        ^---
The variable "enable_ios_corruption_hardening" was set as a build argument
but never appeared in a declare_args() block in any buildfile.

To view all possible args, run "gn args --list <out_dir>"

The build continued as if that argument was unspecified.

Done. Made 15 targets from 8 files in 4ms
ninja: Entering directory `out/debug'
[1/50] LINK (static) liballocator_base.a
[2/50] CXX ../../src/partition_alloc/allocation_guard.cc
FAILED: [code=1] obj/src/partition_alloc/liballocator_core.allocation_guard.o 
clang++ -MD -MF obj/src/partition_alloc/liballocator_core.allocation_guard.o.d -DIS_PARTITION_ALLOC_IMPL -I../../src -Igen/src -Wno-return-type -Wno-invalid-offsetof -fstrict-aliasing -fPIC -fvisibility=hidden -Wexit-time-destructors -fno-stack-protector -std=c++17 -fvisibility-inlines-hidden -fno-exceptions -fno-rtti -c ../../src/partition_alloc/allocation_guard.cc -o obj/src/partition_alloc/liballocator_core.allocation_guard.o
In file included from ../../src/partition_alloc/allocation_guard.cc:10:
In file included from ../../src/partition_alloc/allocation_guard.h:15:
../../src/partition_alloc/partition_alloc_config.h:268:15: error: static assertion failed due to requirement '201703L >= 202002L': PartitionAlloc targets C++20 or higher.
  268 | static_assert(__cplusplus >= 202002L,
      |               ^~~~~~~~~~~~~~~~~~~~~~
<built-in>:439:21: note: expanded from macro '__cplusplus'
  439 | #define __cplusplus 201703L
      |                     ^
1 error generated.
[3/50] CXX ../../src/partition_alloc/allocator_config.cc
FAILED: [code=1] obj/src/partition_alloc/liballocator_core.allocator_config.o 
clang++ -MD -MF obj/src/partition_alloc/liballocator_core.allocator_config.o.d -DIS_PARTITION_ALLOC_IMPL -I../../src -Igen/src -Wno-return-type -Wno-invalid-offsetof -fstrict-aliasing -fPIC -fvisibility=hidden -Wexit-time-destructors -fno-stack-protector -std=c++17 -fvisibility-inlines-hidden -fno-exceptions -fno-rtti -c ../../src/partition_alloc/allocator_config.cc -o obj/src/partition_alloc/liballocator_core.allocator_config.o
In file included from ../../src/partition_alloc/allocator_config.cc:5:
In file included from ../../src/partition_alloc/allocator_config.h:11:
../../src/partition_alloc/partition_alloc_config.h:268:15: error: static assertion failed due to requirement '201703L >= 202002L': PartitionAlloc targets C++20 or higher.
  268 | static_assert(__cplusplus >= 202002L,
      |               ^~~~~~~~~~~~~~~~~~~~~~
<built-in>:439:21: note: expanded from macro '__cplusplus'
  439 | #define __cplusplus 201703L
      |                     ^
1 error generated.
[4/50] CXX ../../src/partition_alloc/dangling_raw_ptr_checks.cc
[5/50] CXX ../../src/partition_alloc/compressed_pointer.cc
FAILED: [code=1] obj/src/partition_alloc/liballocator_core.compressed_pointer.o 
clang++ -MD -MF obj/src/partition_alloc/liballocator_core.compressed_pointer.o.d -DIS_PARTITION_ALLOC_IMPL -I../../src -Igen/src -Wno-return-type -Wno-invalid-offsetof -fstrict-aliasing -fPIC -fvisibility=hidden -Wexit-time-destructors -fno-stack-protector -std=c++17 -fvisibility-inlines-hidden -fno-exceptions -fno-rtti -c ../../src/partition_alloc/compressed_pointer.cc -o obj/src/partition_alloc/liballocator_core.compressed_pointer.o
In file included from ../../src/partition_alloc/compressed_pointer.cc:10:
In file included from ../../src/partition_alloc/compressed_pointer.h:17:
In file included from ../../src/partition_alloc/partition_address_space.h:25:
../../src/partition_alloc/partition_alloc_config.h:268:15: error: static assertion failed due to requirement '201703L >= 202002L': PartitionAlloc targets C++20 or higher.
  268 | static_assert(__cplusplus >= 202002L,
      |               ^~~~~~~~~~~~~~~~~~~~~~
<built-in>:439:21: note: expanded from macro '__cplusplus'
  439 | #define __cplusplus 201703L
      |                     ^
1 error generated.
[6/50] CXX ../../src/partition_alloc/address_pool_manager_bitmap.cc
FAILED: [code=1] obj/src/partition_alloc/liballocator_core.address_pool_manager_bitmap.o 
clang++ -MD -MF obj/src/partition_alloc/liballocator_core.address_pool_manager_bitmap.o.d -DIS_PARTITION_ALLOC_IMPL -I../../src -Igen/src -Wno-return-type -Wno-invalid-offsetof -fstrict-aliasing -fPIC -fvisibility=hidden -Wexit-time-destructors -fno-stack-protector -std=c++17 -fvisibility-inlines-hidden -fno-exceptions -fno-rtti -c ../../src/partition_alloc/address_pool_manager_bitmap.cc -o obj/src/partition_alloc/liballocator_core.address_pool_manager_bitmap.o
In file included from ../../src/partition_alloc/address_pool_manager_bitmap.cc:10:
In file included from ../../src/partition_alloc/address_pool_manager_bitmap.h:23:
In file included from ../../src/partition_alloc/partition_alloc_constants.h:19:
In file included from ../../src/partition_alloc/bucket_lookup.h:23:
In file included from ../../src/partition_alloc/partition_alloc_forward.h:23:
../../src/partition_alloc/partition_alloc_config.h:268:15: error: static assertion failed due to requirement '201703L >= 202002L': PartitionAlloc targets C++20 or higher.
  268 | static_assert(__cplusplus >= 202002L,
      |               ^~~~~~~~~~~~~~~~~~~~~~
<built-in>:439:21: note: expanded from macro '__cplusplus'
  439 | #define __cplusplus 201703L
      |                     ^
1 error generated.
[7/50] CXX ../../src/partition_alloc/address_pool_manager.cc
FAILED: [code=1] obj/src/partition_alloc/liballocator_core.address_pool_manager.o 
clang++ -MD -MF obj/src/partition_alloc/liballocator_core.address_pool_manager.o.d -DIS_PARTITION_ALLOC_IMPL -I../../src -Igen/src -Wno-return-type -Wno-invalid-offsetof -fstrict-aliasing -fPIC -fvisibility=hidden -Wexit-time-destructors -fno-stack-protector -std=c++17 -fvisibility-inlines-hidden -fno-exceptions -fno-rtti -c ../../src/partition_alloc/address_pool_manager.cc -o obj/src/partition_alloc/liballocator_core.address_pool_manager.o
In file included from ../../src/partition_alloc/address_pool_manager.cc:10:
In file included from ../../src/partition_alloc/address_pool_manager.h:19:
In file included from ../../src/partition_alloc/partition_address_space.h:25:
../../src/partition_alloc/partition_alloc_config.h:268:15: error: static assertion failed due to requirement '201703L >= 202002L': PartitionAlloc targets C++20 or higher.
  268 | static_assert(__cplusplus >= 202002L,
      |               ^~~~~~~~~~~~~~~~~~~~~~
<built-in>:439:21: note: expanded from macro '__cplusplus'
  439 | #define __cplusplus 201703L
      |                     ^
1 error generated.
ninja: build stopped: subcommand failed.
